--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "yahoo-jp-yolp",
-  "version": "0.1.0",
+  "name": "n8n-nodes-yahoo-jp-yolp",
+  "version": "0.0.1",
   "description": "Yahoo JP YOLP",
   "keywords": [
     "n8n-community-node-package"
@@ -8,12 +8,12 @@
   "license": "MIT",
   "homepage": "https://n8n.io",
   "author": {
-    "name": "Test",
-    "email": "test@example.com"
+    "name": "June YAMAMOTO",
+    "email": "yambal+n8n@gmail.com"
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/yambal/n8n-nodes-yahoo-jp-yolp"
   },
   "engines": {
     "node": ">=20.15"
