--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "n8n-community-node-package"
   ],
   "license": "MIT",
-  "homepage": "https://n8n.io",
+  "homepage": "https://github.com/yambal/n8n-nodes-yahoo-jp-yolp",
   "author": {
     "name": "June YAMAMOTO",
     "email": "yambal+n8n@gmail.com"
